2024-06-13T00:42:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9491777588 # 325
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-13
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 826 1301 / 838 1313
* notice: next accum: outdated-unq outdated-all / unq all: 828 1303 / 838 1313
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
* notice: removed / changed dates: [2024-05-29] / [2024-05-30]

2024-06-11T00:43:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9457675497 # 323
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 825 1300 / 838 1313
* notice: next accum: outdated-unq outdated-all / unq all: 826 1301 / 838 1313
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-28] / []

2024-06-10T00:44:37Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9440752246 # 322
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-10
* notice: last 14d: unq all: 6 13
* notice: prev accum: outdated-unq outdated-all / unq all: 823 1298 / 838 1313
* notice: next accum: outdated-unq outdated-all / unq all: 825 1300 / 838 1313
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-26 2024-05-27] / []

2024-06-09T00:48:03Z: