@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-06-01T00:45:20Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2024-06-14T00:42:51Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 2 ],
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -1, +2 ]
 }
