@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-06-13T00:42:59Z",
-  "count_outdated" : 1303,
-  "uniques_outdated" : 828,
+  "timestamp" : "2024-06-14T00:42:51Z",
+  "count_outdated" : 1305,
+  "uniques_outdated" : 830,
   "count" : 1313,
   "uniques" : 838,
   "clones" : [
     {
-      "timestamp": "2024-05-30T00:00:00Z",
+      "timestamp": "2024-05-31T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 1, 2 ]
-    },
-    {
-      "timestamp": "2024-05-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
     },
     {
       "timestamp": "2024-06-01T00:00:00Z",
