@@ -1,16 +1,11 @@
 {
-  "count": 9,
-  "uniques": 4,
+  "count": 7,
+  "uniques": 3,
   "clones": [
     {
-      "timestamp": "2024-05-30T00:00:00Z",
+      "timestamp": "2024-05-31T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2024-05-31T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2024-06-01T00:00:00Z",
